# pipeline-sink

./: .gitignore  MANIFEST.in  README.md  helper.sh  requirements.txt  setup.cfg
src/pipelinesink/: factory.py  pipeline_sink.py
src/pipelinesink/impl/: azure_storage_queue.py
src/tgedr/pipeline/sink/: azure_storage_queue.py
test/: test_azure_storage_queue.py  test_exception.py
test/resources/: configlookup.json
