[metadata]
name = pipeline-sink
version = 0.0.0
author = ...
author_email = ...
url = ...
description = This package provides ...
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find:
install_requires =
    pytest, configlookup, azure-storage-queue
[options.packages.find]
where=src
