[metadata]
name = tgedr-pipeline-sink
version = 0.0.2
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/pipeline-sink
description = this package provides pipeline sink implementations
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find_namespace:
install_requires =
    pytest
    configlookup
    tgedr-pipeline-common==0.1.10
    azure-storage-queue
[options.packages.find]
where=src
